# MHBench

./: .gitignore  bake-image.sh  cli.py  dsl.py  main.py  pyproject.toml
ansible/: ansible_runner.py  inventory
ansible/bake_playbooks/: attacker.yml  database.yml  employee.yml  manage_host.yml  ubuntu_base.yml  webserver.yml
ansible/caldera/: StartAttacker.py  __init__.py  bake_attacker.yml  start_attacker.yml
ansible/defender/: StartServices.py  __init__.py  start_services.py  start_services.yml
ansible/deployment_instance/: __init__.py
config/: .gitignore  config.py  config_example.json  config_service.py  terraform_example.json
environments/: chain_pe.json  demo_attacker.json  dumbbell.json  dumbbell_pe.json  dumbbell_simple.json  dumbbell_simple_with_playbooks.json  enterprise_b.json  equifax.json  equifax_large.json  equifax_small.json  ics.json  star.json
environments/non-generated/: chain.json  chain_2hosts.json  dumbbell.json  dumbbell_pe.json  dumbbell_simple.json  enterprise_a.json  enterprise_b.json  equifax_large.json  equifax_medium.json  equifax_small.json  ics.json  star_pe.json
openstack_setup/: setup_kolla.sh
src/: env_gen_deployer.py  image_baker.py  terraform_deployer.py  terraform_helpers.py  topology_manifests.py  webhook_notifier.py
src/abstractions/: network.py
src/compilation/: compiler_service.py  (+2 more)
topologies/: chain_2hosts.yaml  dumbbell.yaml  enterprise_a.yaml  enterprise_b.yaml  enterprise_c.yaml  equifax_large.yaml  equifax_medium.yaml  equifax_small.yaml  ics_inspired.yaml  openstack_dev.yaml  ring.yaml  star.yaml
(+153 files in other folders)
